--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,22 +10,34 @@
     tools:context="comsitejustdoitwhistle.google.sites.monermoney.MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="top|center"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
 
         android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tvSummarylabel"
+            android:layout_width="270dp"
+            android:layout_height="60dp"
+            android:textSize="40dp"
+            android:textColor="#FFFFFF"
+            android:text="0"
+
+            android:gravity="center_horizontal|center">
+        </TextView>
+
         <TextView
             android:id="@+id/tvSummary1"
             android:layout_width="270dp"
             android:layout_height="60dp"
-            android:text="Comming Soon :)"
-
-            android:gravity="center_horizontal|center"
-            android:background="@drawable/oval_shape">
+            android:textSize="20dp"
+            android:textColor="#FFFFFF"
+            android:text="รายจ่ายวันนี้: "
+            android:layout_marginBottom="5dp"
+            android:gravity="center_horizontal|center">
         </TextView>
-    </LinearLayout>
 
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
