--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_height="60dp"
             android:textSize="20dp"
             android:textColor="#FFFFFF"
-            android:text="รายจ่ายวันนี้: "
+            android:text="ทั้งหมมด: 0"
             android:layout_marginBottom="5dp"
             android:gravity="center_horizontal|center">
         </TextView>
